--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -26,5 +25,6 @@
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.2",
     "schedule": "^0.5.0"
-  }
+  },
+  "description": ""
 }
